Created 'game' folder
- 'game' folder holds GameCreate function
- added import to 'App.js'
- npm installed react-canvas-draw
  - created CanvasDraw
- creating a game is a success from front end

SideNote:
- created 'round' folder
- working on 'Round.js'

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,4 +45,11 @@ $charcoal: #ccc;
     align-self: flex-end;
     max-width: 200px;
   }
+
+  .drawing-canvas {
+    border: 2px solid;
+    border-color: #fff;
+    height: 200px;
+    width: 500px;
+  }
 }
