--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,44 @@ $warning: #f1e681;
 $error: #f08181;
 $charcoal: #ccc;
 
+header {
+  background-color: #ccccc8;
+}
+
+html {
+  background-color: #f0e32b;
+}
+
+#root {
+  background-color: #f0e32b;
+}
+
+.auth-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 15% auto 0;
+  max-width: 600px;
+
+  h3,
+  input {
+    margin-bottom: 5%;
+  }
+
+  button {
+    align-self: flex-end;
+    max-width: 200px;
+  }
+}
+
+.container {
+  background-color: #f0e32b;
+}
+
+.each-round {
+  background-color: #ccccc8;
+}
+
 .flash-success,
 .flash-warning,
 .flash-error {
@@ -29,20 +67,11 @@ $charcoal: #ccc;
   background-color: $error;
 }
 
-.auth-form {
+.round-create {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 15% auto 0;
-  max-width: 600px;
-
-  h3,
-  input {
-    margin-bottom: 5%;
-  }
-
-  button {
-    align-self: flex-end;
-    max-width: 200px;
-  }
+  margin: auto;
+  padding: 30px;
+  width: 350px;
 }
