--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -2,10 +2,15 @@ $charcoal: #bbb;
 
 .main-header {
   align-items: center;
+  background-color: #ccccc8;
   border-bottom: 1px solid $charcoal;
   display: flex;
   height: 100px;
   padding: 0 20px;
+
+  h1 {
+    font-size: 60px;
+  }
 
   a,
   span {
